Updates to messages endpoints to limit results to 50, sort by published
- limit may be better served as an optional param defaulting to 50 dunno
- sort is by publishTime descending
- added new notification options
