# api/lib/routes/messages.js
@@ -8,28 +8,6 @@ var validator  = require( 'validator' ),
     envelope;
 
 exports = module.exports = function MessageRoutes( auth , router ) {
-    // TO DO: add default limit of 50
-    //       add sort publishTime desc
-    //       return Item.find(
-    //           {
-    //               item_id: "03010200400000a0bf00210"
-    //           })
-    //           .sort({
-    //               ts:-1
-    //           })
-    //           .limit( 1 )
-    //           .execAsync();
-
-    // db.messages
-    //     .find({
-    //         audience:{
-    //             $in:[
-    //                 '123123:players',
-    //                 '123124:fans',
-    //                 '123125:fans'
-    //             ]
-    //         }
-    //     });
 
     // get list of all messages
     router.get( '/messages', auth.requireUser , function( req , res , next ) {
@@ -82,7 +60,11 @@ exports = module.exports = function MessageRoutes( auth , router ) {
     });
 
     router.get( '/messages/search', auth.requireUser , function( req , res , next ) {
-        var keys, query;
+        var since = req.query.since || 0,
+            sortObj = {
+                'publishTime': -1
+            },
+            keys, query, queryData;
 
         envelope = new Envelope();
 
@@ -90,12 +72,12 @@ exports = module.exports = function MessageRoutes( auth , router ) {
         keys = routeUtils.findModelMembers( Message );
 
         // obtain query schema
-        query = routeUtils.getSearchQuery({
+        queryData = routeUtils.getSearchQuery({
             'keys':  keys,
             'query': req.query
         });
 
-        if( !query ){
+        if( !queryData ){
             // after parsing, no valid query present...
             // send error envelope and bail
             envelope.error( 400 , {
@@ -106,21 +88,32 @@ exports = module.exports = function MessageRoutes( auth , router ) {
             return;
         }
 
-        Message
-            .findAsync( query )
-                .then( function ( messages ) {
-                    envelope.success( 200 , messages );
-                    res.json( envelope );
-                    return;
-                })
-                .catch( function ( err ) {
-                    envelope.error( 500 , {
-                        'details': 'The server returned an error finding messages matching supplied arguments.',
-                        'append':  true
-                    });
-                    res.json( envelope );
-                    return;
+        query = Message.find( queryData );
+
+        if( since !== 0 ) {
+            // time contraint
+            if( validator.isInt( since ) ){
+                query = query.where( 'publishTime' ).gt( new Date( since ) );
+            }
+        }
+
+        query
+            .sort( sortObj )
+            .limit( 50 )
+            .execAsync()
+            .then( function ( messages ) {
+                envelope.success( 200 , messages );
+                res.json( envelope );
+                return;
+            })
+            .catch( function ( err ) {
+                envelope.error( 500 , {
+                    'details': 'The server returned an error finding messages matching supplied arguments.',
+                    'append':  true
                 });
+                res.json( envelope );
+                return;
+            });
         return;
     });
 
